--- a/argocd/sealed-secrets.yml
+++ b/argocd/sealed-secrets.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: sealedsecrets
+    namespace: kube-system
   project: tools
   source:
     repoURL: https://github.com/jothep/Infra-dojo-k8s.git
