change target revision to tag

--- a/argocd/sealed-secrets.yml
+++ b/argocd/sealed-secrets.yml
@@ -10,7 +10,7 @@ spec:
   project: tools
   source:
     repoURL: https://github.com/jothep/Infra-dojo-k8s.git
-    targetRevision: 0fa890f7cfc22e73337a4ee23be6ddb851956112
+    targetRevision: v0.1
     path: helmCharts/sealed-secrets
     helm:
       releaseName: sealedsecrets
