--- a/helmCharts/kafkaui/templates/deployment.yaml
+++ b/helmCharts/kafkaui/templates/deployment.yaml
@@ -29,6 +29,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if not .Values.serviceAccount.automountServiceAccountToken }}
+      automountServiceAccountToken: {{ default "false" .Values.serviceAccount.automountServiceAccountToken }}
+      {{- end }}
       serviceAccountName: {{ include "kafka-ui.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
