set helm to check if sa exist in sealed-secrets. and sealed-secrets are out of date, need upgrade

--- a/helmCharts/sealed-secrets/templates/service-account.yaml
+++ b/helmCharts/sealed-secrets/templates/service-account.yaml
@@ -1,11 +1,14 @@
 {{ if .Values.serviceAccount.create }}
+  {{- $sAName := include "sealed-secrets.serviceAccountName" . }}
+  {{- if not (lookup "v1" "ServiceAccount" $sAName .Release.Namespace) }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "sealed-secrets.serviceAccountName" . }}
+  name: {{ $sAName }}
   namespace: {{ include "sealed-secrets.namespace" . }}
   labels: {{- include "sealed-secrets.labels" . | nindent 4 }}
     {{- if .Values.serviceAccount.labels }}
     {{- include "sealed-secrets.render" ( dict "value" .Values.serviceAccount.labels "context" $) | nindent 4 }}
     {{- end }}
-{{ end }}
+  {{- end }}
+  {{- end }}
