update ansible docker

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -54,5 +54,12 @@
     append: yes
   become: true
 
-- name: Flush handlers
-  meta: flush_handlers
+- name: "Print a reminder message about re-login"
+  debug:
+  msg:
+    - "======================================================================="
+    - "Docker installed successfully!"
+    - "IMPORTANT: In order for the current user '{{ ansible_user }}' to run docker commands without sudo,"
+    - "You must first **log out** of the current SSH session and then **log in** again."
+    - "(Log out and log back in for the 'docker' group changes to take effect.)"
+    - "========================================================================="
